--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap,");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
 
 .footer {
   background: url(/footer.svg) top center no-repeat;
@@ -43,15 +40,7 @@ body {
     text-wrap: balance;
   }
 } */
- 
 
-.slick-slide div{
-  margin:15px;
-
+.slick-slide div {
+  margin: 15px;
 }
-
-
-
-
-
-
