feat: contactus page updated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,10 @@
   background-size: cover;
 }
 
+/* globals.css */
+/* globals.css */
+
+
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -44,3 +48,5 @@ body {
 .slick-slide div {
   margin: 15px;
 }
+
+
