feat: navbar trainers and all updated

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 
 
 staging
-/* :root {
+:root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -46,7 +46,7 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-} */
+}
 
 .slick-slide div {
   margin: 15px;
